<resources>
    <!-- Strings für Aktivitäts-Namen -->
    <string name="app_name">Humidimeter</string>
    <string name="activity_init">Humidimeter Initialisierung</string>
    <string name="activity_settings_show">Einstellungen anzeigen</string>
    <string name="activity_settings_edit">Einstellungen ändern</string>

    <!-- Strings für Initialisierung -->
    <string name="welcomeText">Herzlich Willkommen bei Humidimeter!</string>
    <string name="pleaseEnterData">Bitte trage deine Daten ein, damit das Maximum der App erreicht werden kann.</string>

    <!-- Strings für UserDaten -->
    <string name="firstNameHint">Name</string>
    <string name="countryCodeHint">Land</string>
    <string name="postalCodeHint">Postleitzahl</string>
    <string name="cityHint">Stadt</string>
    <string name="firstName">TestName</string>
    <string name="countryCode">Deutschland</string>
    <string name="postalCode">22767</string>
    <string name="city">Hamburg</string>

    <!-- Strings für Initialisierung -->
    <string name="coldResistant">Mir wird schnell kalt</string>
    <string name="heatResistant">Mir wird schnell heiss</string>
    <string name="coronaMode">Corona-Modus</string>

    <!-- Strings für Buttons -->
    <string name="btnNext">Weiter</string>
    <string name="btnEdit">Ändern</string>
    <string name="btnSave">Speichern</string>
    <string name="btnDeleteAccount">Account löschen</string>

    <!-- Strings für Fragmente -->
    <string name="fragment_home_dry">Home Dry</string>
    <string name="fragment_home_normal">Home Normal</string>
    <string name="fragment_home_wet">Home Wet</string>
    <string name="ventilation">Jetzt Lüften!</string>


    <string name="home_dry_welcome">Die Raumluft ist zu trocken!</string>
    <string name="home_normal_welcome">Die Raumluft ist genau richtig!</string>
    <string name="home_wet_welcome">Die Raumluft ist zu feucht!</string>
    <string name="btnBack">Zurück</string>
    <string name="btnCancel">Abbrechen</string>
    <string name="feuchtigkeit">Feuchtigkeit</string>
    <string name="pleaseVentilate">Bitte sofort Lüften!</string>
</resources>