<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.MainActivityInitialize">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_weight="0"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/textFieldFirstName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/firstNameHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/textFieldCountry"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/countryCodeHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/textFieldPostalCode"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/postalCodeHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:autofillHints="" />

    <EditText
        android:id="@+id/textFieldCity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/cityHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:autofillHints="" />

    <Switch
        android:id="@+id/switchColdRes"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/coldResistant"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchHeatRes"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/heatResistant"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchCoronaMode"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/coronaMode"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/view40dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0" />

    <Button
        android:id="@+id/btnInitSave"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/btnNext" />
</LinearLayout>